gitops/apps/development/hashicorp-vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: development.vault.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hashicorp-vault
                port:
                  number: 8200
